# git_history_gen

./: .env.example  .gitignore  CHAINLIT_QUICKSTART.md  CHAINLIT_README.md  README.md  chainlit.md  main.py  project_guide.md  pyproject.toml  pytest.ini  requirements.txt  show_index_guide.py  startup.sh  test_commit_sha_fix.py  test_embedding_config.py  test_full_indexing.py  test_remote_indexing.py  test_tool_message_fix.py  test_workflow.py
.chainlit/: config.toml
docs/: 00_INDEX.md  ASYNC_UI_SEPARATION.md  AZURE_INDEX_IMPLEMENTATION_REPORT.md  AZURE_SEARCH_INDEX_GUIDE.md  CACHE_AND_CONTEXT_IMPROVEMENT.md  CHAT_APP_COMPLETE_FIX.md  CHAT_APP_GUIDE.md  CHAT_APP_GUIDE_NEW.md  CHAT_PROGRESS_UPDATE_FIX.md  CHAT_TIMEOUT_FIX.md  CONVERSATION_TIMEOUT_FIX.md  COST_OPTIMIZATION.md  DEMO_SCRIPT.md  FINAL_COMPLETION_REPORT.md  FUNCTIONALITY_TEST_FINAL.md  FUNCTIONALITY_TEST_FIX.md  FUNCTION_CALLING_FIX.md  GITHUB_SEARCH_TOOL.md  INDEXING_RESULT_FIX.md  MULTI_REPO_INDEXING.md  MULTI_REPO_INDEXING_SUMMARY.md  ONLINE_READER_TOOLS.md  PRESENTATION_CHECKLIST.md  PROJECT_CLEANUP_REPORT.md  PROJECT_COMPLETION_REPORT.md  PROJECT_EVALUATION.md  PROJECT_GUIDE_COMPLIANCE_REPORT.md  PROJECT_IMPLEMENTATION.md  QNA.md  STREAMING_RESPONSE_FIX.md  TEST_REPORT.md  TEST_REPORT_MULTI_REPO.md  TOOL_CALL_LOOP_FIX.md  UPDATE_MULTI_REPO.md  UPDATE_REPORT.md  UPDATE_SUMMARY.md  USER_GUIDE.md  WINDOWS_LONG_PATH_FIX.md
examples/: README.md  index_usage_examples.py
scripts/: download_icons.py
src/: agent.py  app.py  chat_app.py  document_generator.py  embedding.py  index_manager.py  indexer.py  (+5 more)
(+29 files in other folders)
